--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,6 @@ services:
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
         volumes:
             - '.:/var/www/html'
-            - ~/.ssh:/root/.ssh:ro'
         networks:
             - sail
         depends_on:
@@ -45,6 +44,15 @@ services:
             test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
+    chrome:
+        image: 'browserless/chrome'
+        ports:
+            - '${BROWSERLESS_CHROME_PORT:-3000}:3000'
+        networks:
+            - sail
+        environment:
+            - CONNECTION_TIMEOUT=-1
+
 networks:
     sail:
         driver: bridge
