--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
             - sail
         environment:
             - CONNECTION_TIMEOUT=-1
-
+            # - DEFAULT_LAUNCH_ARGS=["--virtual-time-budget=10000"]
 networks:
     sail:
         driver: bridge
