added new logic to get the image dimensions

--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,12 @@
         "php": "^8.0",
         "abraham/twitteroauth": "^4.0",
         "bugsnag/bugsnag-laravel": "^2.0",
-        "debril/feed-io": "^5.0",
         "diarmuidie/niceid": "^1.2",
         "filament/filament": "^2.0",
         "flowframe/laravel-trend": "^0.1.1",
         "fruitcake/laravel-cors": "3.0",
+        "intervention/image": "^2.7",
         "laravel/framework": "^9.0",
-        "league/flysystem-aws-s3-v3": "^3.0",
         "plank/laravel-mediable": "^5.2",
         "roach-php/laravel": "^1.0",
         "spatie/browsershot": "^3.52",
