adding github actions

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="The Daily Smark"
+APP_NAME="Lucha Foots"
 APP_ENV=local
 APP_KEY=base64:KGg0npeyEsUjl58YOYkNaGQdmyZBw9eSYe8q6zxZe9w=
 APP_DEBUG=false
@@ -37,8 +37,3 @@ AWS_DEFAULT_REGION=nyc3
 AWS_BUCKET=luchafotos-live
 AWS_ENDPOINT=https://nyc3.digitaloceanspaces.com
 AWS_USE_PATH_STYLE_ENDPOINT=false
-
-TWITTER_CONSUMER_KEY=3HqJ0IvbhNd9rlKTdPfsGQ3kZ
-TWITTER_CONSUMER_SECRET=CzAMMIy3pPaHC5OQIXABXQmwYKHH0MXNOGKDr54uPhrCaKWfIM
-TWITTER_ACCESS_TOKEN=988910327608864769-jw1NcqUacXYNDZtE4AaFPv4zeN0YcyH
-TWITTER_ACCESS_TOKEN_SECRET=LSMF1b4k0e6dg87viKBR5tTRdSOo4WRxyQ9pyLz3VJbCu
