--- a/.env.testing
+++ b/.env.testing
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=mysql
 DB_PORT=33306
 DB_DATABASE=testing
 DB_USERNAME=root
