--- a/.env.testing
+++ b/.env.testing
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db1-do-user-1444267-0.b.db.ondigitalocean.com
-DB_PORT=25060
-DB_DATABASE=luchafotos
-DB_USERNAME=luchafotos
-DB_PASSWORD=QylO2mPGh1NTOYHn
+DB_HOST=127.0.0.1
+DB_PORT=33306
+DB_DATABASE=testing
+DB_USERNAME=root
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
