--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
         "postcss": "^8.4.6",
         "tailwindcss": "^3.0.22",
         "vite": "^3.0.9"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/progress": "^0.2.7",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
