--- a/.env.testing
+++ b/.env.testing
@@ -1,7 +1,7 @@
 APP_NAME="Lucha Foots"
 APP_ENV=local
 APP_KEY=base64:KGg0npeyEsUjl58YOYkNaGQdmyZBw9eSYe8q6zxZe9w=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=33306
+DB_HOST=mysql
+DB_PORT=3306
 DB_DATABASE=testing
 DB_USERNAME=root
-DB_PASSWORD=secret
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
