--- a/.env.testing
+++ b/.env.testing
@@ -10,10 +10,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=mysql
-DB_PORT=3306
+DB_PORT=33306
 DB_DATABASE=testing
 DB_USERNAME=root
-DB_PASSWORD=password
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
