--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -64,6 +64,7 @@ jobs:
     - name: Execute tests (Unit and Feature tests) via PestPHP
       env:
         DB_CONNECTION: mysql
+        DB_HOST: 127.0.0.1
         DB_DATABASE: testing
         DB_PORT: 33306
         DB_USER: root
