--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/react": "^18.0.21",
+        "@types/react-dom": "^18.0.6",
         "autoprefixer": "^10.4.2",
         "laravel-mix": "^6.0.6",
         "laravel-vite-plugin": "^0.5.4",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.0.22",
+        "ts-loader": "^9.4.1",
+        "typescript": "^4.8.4",
         "vite": "^3.0.9"
     },
     "dependencies": {
