--- a/.env.testing
+++ b/.env.testing
@@ -37,3 +37,5 @@ AWS_DEFAULT_REGION=nyc3
 AWS_BUCKET=luchafotos-live
 AWS_ENDPOINT=https://nyc3.digitaloceanspaces.com
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
+SCOUT_DRIVER=database
