--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "inertiajs/inertia-laravel": "^0.6.3",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.0",
+        "laravel/scout": "^9.4",
         "plank/laravel-mediable": "^5.2",
         "roach-php/laravel": "^1.0",
         "spatie/browsershot": "^3.52",
