added feature tests for search endpoint

--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,4 @@
-APP_NAME="Lucha Foots"
+APP_NAME="Lucha Fotos"
 APP_ENV=local
 APP_KEY=base64:KGg0npeyEsUjl58YOYkNaGQdmyZBw9eSYe8q6zxZe9w=
 APP_DEBUG=true
@@ -10,10 +10,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=mysql
-DB_PORT=33306
+DB_PORT=3306
 DB_DATABASE=testing
-DB_USERNAME=root
-DB_PASSWORD=secret
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
