--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/progress": "^0.2.7",
+        "axios": "^1.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     }
