--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,7 +13,7 @@ jobs:
           MYSQL_ROOT_PASSWORD: secret
           MYSQL_DATABASE: testing
         ports:
-          - 33306:3306
+          - 3306:3306
         options: >-
           --health-cmd="mysqladmin ping"
           --health-interval=10s
@@ -62,14 +62,10 @@ jobs:
     - name: PHP Version
       run: php --version
     - name: Execute tests (Unit and Feature tests) via PestPHP
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_DATABASE: testing
-        DB_PORT: 33306
-        DB_USER: root
-        DB_PASSWORD: secret
       run: |
+          echo "DB_HOST=127.0.0.1" >> .env.testing
           php artisan key:generate
           php artisan migrate --force
           vendor/bin/pest
+      env:
+        DB_HOST: 127.0.0.1
