--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,4 @@
-APP_NAME="Lucha Foots"
+APP_NAME="Lucha Fotos"
 APP_ENV=local
 APP_KEY=base64:KGg0npeyEsUjl58YOYkNaGQdmyZBw9eSYe8q6zxZe9w=
 APP_DEBUG=true
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=mysql
-DB_PORT=33306
+DB_PORT=3306
 DB_DATABASE=testing
 DB_USERNAME=root
 DB_PASSWORD=secret
@@ -37,3 +37,5 @@ AWS_DEFAULT_REGION=nyc3
 AWS_BUCKET=luchafotos-live
 AWS_ENDPOINT=https://nyc3.digitaloceanspaces.com
 AWS_USE_PATH_STYLE_ENDPOINT=false
+
+SCOUT_DRIVER=database
