--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@types/react": "^18.0.21",
+        "@types/react-dom": "^18.0.6",
         "autoprefixer": "^10.4.2",
         "laravel-mix": "^6.0.6",
         "laravel-vite-plugin": "^0.5.4",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.0.22",
+        "ts-loader": "^9.4.1",
+        "typescript": "^4.8.4",
         "vite": "^3.0.9"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/progress": "^0.2.7",
+        "axios": "^1.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     }
