--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Lucha Foots"
+APP_NAME="Lucha Fotos"
 APP_ENV=local
 APP_KEY=base64:KGg0npeyEsUjl58YOYkNaGQdmyZBw9eSYe8q6zxZe9w=
 APP_DEBUG=false
