--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,17 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "abraham/twitteroauth": "^4.0",
         "bugsnag/bugsnag-laravel": "^2.0",
         "diarmuidie/niceid": "^1.2",
-        "fruitcake/laravel-cors": "3.0",
-        "inertiajs/inertia-laravel": "^0.6.3",
-        "laravel/framework": "^9.0",
+        "inertiajs/inertia-laravel": "^0.6.9",
+        "laravel/framework": "^10.0",
         "laravel/scout": "^9.4",
-        "roach-php/laravel": "^1.0",
+        "roach-php/laravel": "^2.0",
         "spatie/browsershot": "^3.52",
         "spatie/laravel-backup": "*",
-        "spatie/laravel-data": "^1.0"
+        "spatie/laravel-data": "^3.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
@@ -27,11 +26,11 @@
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
+        "nunomaduro/collision": "^6.4",
         "pestphp/pest": "^1.22",
         "pestphp/pest-plugin-laravel": "^1.3",
         "pestphp/pest-plugin-mock": "^1.0",
-        "spatie/laravel-ignition": "^1.0",
+        "spatie/laravel-ignition": "^2.0",
         "wnx/laravel-stats": "^2.7"
     },
     "autoload": {
@@ -77,6 +76,6 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
